<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.malab.takumi.sensordatabaseapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:background="@color/colorLayoutUserNameBackground">

        <TextView
            android:id="@+id/textView_use_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/textview_username"
            android:textColor="@color/colorTextUserName"/>

        <EditText
            android:id="@+id/editText_useName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>

        <Button
            android:id="@+id/button_go"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:padding="10dp"
            android:text="@string/button_username"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorLayoutSensorBackground">

        <TextView
            android:id="@+id/textView_sensorState"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_state_notlogin"
            android:textSize="20sp"
            android:textColor="@color/colorTextSensorState"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:text="@string/button_stop"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_logcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
